Add 2 unhappy path tests to RentalControllerUserPostRentalTest, add ResponseStatusException handling